# lemvi-positions-recording

./: .gitignore  .terraform.lock.hcl  CHANGELOG.md  LICENSE  README.md  cabal.project.freeze  lemvi-positions-recording.cabal  main.tf  package.json  serverless.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-entrypoint.sh  startup.sh
project/app/: Main.hs
project/aws-app/: Main.hs
project/decryption-app/: Local.hs  Main.hs
project/deribit-app/: Local.hs  Main.hs
project/echo-app/: Local.hs  Main.hs
project/ibrokers-app/: Local.hs  Main.hs
project/ibrokers-fetch-app/: Local.hs  Main.hs
project/ibrokers-ftp-app/: Local.hs  Main.hs
project/ibrokers-request-app/: Local.hs
project/local-app/: Main.hs
project/src/: AWSEvent.hs  DeribitReports.hs  Echo.hs  GPGDecrypt.hs  Helper.hs  IBrokersMoveFTP.hs  IBrokersReports.hs  Lib.hs  PostSQS.hs  Services.hs
project/test/: AWSEventDecoderSpec.hs  HelperSpec.hs  Spec.hs
project/test/resources/: ib-report-sample.xml
terraform/: lambdas.tf  main.tf  outputs.tf  restapis.tf  scheduling.tf  variables.tf
terraform/aws-lambda/: main.tf  outputs.tf  variables.tf
terraform/aws-lambda-posting/: main.tf  variables.tf
terraform/gateway-proxy-integration/: main.tf  outputs.tf  variables.tf
