cabal-version:      3.0

-- The name of the package.
name:               lemvi-positions-recording
version:            0.1.0.0
synopsis: Aggregating positions from various exchanges

-- A longer description of the package.
description: This package contains AWS functions laoding positions from various exchanges for Risk Monitoring purposes.

homepage:
    https://github.com/Lemvi-Risk-Monitoring/lemvi-positions-recording

license:            MIT
license-file:       LICENSE
author:             Christophe
maintainer:         christophe.alexandre@lemvi.ch

-- copyright:
category:           AWS
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common shared
    build-depends: base >=4.7 && <5
        , aeson
        , text
        , servant
        , servant-server
        , text
        , hal
        , warp
        , http-conduit
        , bytestring
        , containers
        , xml
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-export-lists
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints
        -O2
        -threaded
        -haddock
    default-language: Haskell2010

library
    import:           shared
    exposed-modules: Services
        , IBrokersReports

    hs-source-dirs:   project/src
    default-language: Haskell2010

executable echo-app
    import:           shared
    main-is:          Main.hs
    hs-source-dirs:   project/echo-app
    default-language: Haskell2010
    build-depends: lemvi-positions-recording

executable aws-app
    import:           shared
    main-is:          Main.hs
    hs-source-dirs:   project/aws-app
    default-language: Haskell2010
    build-depends: lemvi-positions-recording
        , wai-handler-hal

executable local-app
    import:           shared
    main-is:          Main.hs
    hs-source-dirs:   project/local-app
    default-language: Haskell2010
    build-depends: lemvi-positions-recording

executable ibrokers-app
    import:           shared
    main-is:          Main.hs
    hs-source-dirs:   project/ibrokers-app
    default-language: Haskell2010
    build-depends: lemvi-positions-recording

test-suite lemvi-positions-recording-test
    import:           shared
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   project/test
    main-is:          Spec.hs
