cabal-version:      3.0

-- The name of the package.
name:               lemvi-positions-recording
version:            0.1.0.0
synopsis: Aggregating positions from various exchanges

-- A longer description of the package.
description: This package contains AWS functions laoding positions from various exchanges for Risk Monitoring purposes.

homepage:
    https://github.com/Lemvi-Risk-Monitoring/lemvi-positions-recording

license:            MIT
license-file:       LICENSE
author:             Christophe
maintainer:         christophe.alexandre@lemvi.ch

-- copyright:
category:           AWS
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common shared
    build-depends: base >=4.7 && <5
        , aeson >= 2.2.1 && < 2.3
        , bytestring >= 0.11.5 && < 0.12
        , containers >= 0.6.7 && < 0.7
        , hal >= 1.1 && < 1.2
        , http-client >= 0.7.16 && < 0.8
        , http-conduit >= 2.3.8 && < 2.4
        , servant >= 0.20.1 && < 0.21
        , servant-server >= 0.20 && < 0.21
        , text >= 2.0.2 && < 2.1
        , warp >= 3.3.31 && < 3.4
        , xml >= 1.3.14 && < 1.4
        , unordered-containers >= 0.2.20 && < 0.3
        , http-types >= 0.12.4 && < 0.13
        , amazonka >= 2.0 && < 2.1
        , amazonka-s3 >= 2.0 && < 2.1
        , time >= 1.12.2 && < 1.13
        , lens >= 5.2.3 && < 5.3
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-patterns
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-export-lists
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints
        -O2
        -threaded
        -haddock
    default-language: Haskell2010

library
    import:           shared
    exposed-modules: Echo
        , Helper
        , IBrokersReports
        , DeribitReports

    hs-source-dirs:   project/src
    default-language: Haskell2010

executable echo-app
    import:           shared
    main-is:          Main.hs
    hs-source-dirs:   project/echo-app
    default-language: Haskell2010
    build-depends: lemvi-positions-recording
        , wai-handler-hal >= 0.4.0 && < 0.5

executable echo-local
    import:           shared
    main-is:          Local.hs
    hs-source-dirs:   project/echo-app
    default-language: Haskell2010
    build-depends: lemvi-positions-recording

executable ibrokers-app
    import:           shared
    main-is:          Main.hs
    hs-source-dirs:   project/ibrokers-app
    default-language: Haskell2010
    build-depends: lemvi-positions-recording

executable deribit-app
    import:           shared
    main-is:          Main.hs
    hs-source-dirs:   project/deribit-app
    default-language: Haskell2010
    build-depends: lemvi-positions-recording
        , wai-handler-hal >= 0.4.0 && < 0.5

executable deribit-local
    import:           shared
    main-is:          Local.hs
    hs-source-dirs:   project/deribit-app
    default-language: Haskell2010
    build-depends: lemvi-positions-recording

test-suite lemvi-positions-recording-test
    import:           shared
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   project/test
    main-is:          Spec.hs
    other-modules:
        Helper
        HelperSpec
    hs-source-dirs:
        project/test
        project/src
    build-depends: hspec
