cabal-version:      3.0

-- The name of the package.
name:               lemvi-positions-recording
version:            0.1.0.0
synopsis: Aggregating positions from various exchanges

-- A longer description of the package.
description: This package contains AWS functions laoding positions from various exchanges for Risk Monitoring purposes.

homepage:
    https://github.com/Lemvi-Risk-Monitoring/lemvi-positions-recording

license:            MIT
license-file:       LICENSE
author:             Christophe
maintainer:         christophe.alexandre@lemvi.ch

-- copyright:
category:           AWS
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common shared
    build-depends: base >=4.7
        , aeson
        , base-compat
        , bytestring
        , conduit-extra
        , containers
        , exceptions
        , hal
        , hOpenPGP
        , http-client
        , http-conduit
        , servant
        , servant-server
        , text
        , warp
        , xml
        , unordered-containers
        , http-types
        , amazonka
        , amazonka-s3
        , amazonka-sqs
        , time
        , resourcet
        , lens
        , generic-lens
        , fast-logger
        , directory
        , curl
        , transformers
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-patterns
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-export-lists
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints
        -O2
        -threaded
        -haddock
    default-language: Haskell2010

library
    import:           shared
    exposed-modules: Echo
        , Helper
        , IBrokersReports
        , DeribitReports
        , PostSQS
        , AWSEvent
        , IBrokersMoveFTP
        , GPGDecrypt

    hs-source-dirs:   project/src
    default-language: Haskell2010

executable echo-app
    import:           shared
    main-is:          Main.hs
    hs-source-dirs:   project/echo-app
    default-language: Haskell2010
    build-depends: lemvi-positions-recording
        , wai-handler-hal >= 0.4.0 && < 0.5

executable echo-local
    import:           shared
    main-is:          Local.hs
    hs-source-dirs:   project/echo-app
    default-language: Haskell2010
    build-depends: lemvi-positions-recording

executable ibrokers-request-app
    import:           shared
    main-is:          Main.hs
    hs-source-dirs:   project/ibrokers-request-app
    default-language: Haskell2010
    build-depends: lemvi-positions-recording
        , wai-handler-hal >= 0.4.0 && < 0.5

executable ibrokers-request-local
    import:           shared
    main-is:          Local.hs
    hs-source-dirs:   project/ibrokers-request-app
    default-language: Haskell2010
    build-depends: lemvi-positions-recording

executable ibrokers-fetch-app
    import:           shared
    main-is:          Main.hs
    hs-source-dirs:   project/ibrokers-fetch-app
    default-language: Haskell2010
    build-depends: lemvi-positions-recording
        , wai-handler-hal >= 0.4.0 && < 0.5

executable ibrokers-fetch-local
    import:           shared
    main-is:          Local.hs
    hs-source-dirs:   project/ibrokers-fetch-app
    default-language: Haskell2010
    build-depends: lemvi-positions-recording
    
executable ibrokers-ftp-app
    import:           shared
    main-is:          Main.hs
    hs-source-dirs:   project/ibrokers-ftp-app
    default-language: Haskell2010
    build-depends: lemvi-positions-recording
        , wai-handler-hal >= 0.4.0 && < 0.5

executable ibrokers-ftp-local
    import:           shared
    main-is:          Local.hs
    hs-source-dirs:   project/ibrokers-ftp-app
    default-language: Haskell2010
    build-depends: lemvi-positions-recording

executable decryption-app
    import:           shared
    main-is:          Main.hs
    hs-source-dirs:   project/decryption-app
    default-language: Haskell2010
    build-depends: lemvi-positions-recording
        , wai-handler-hal >= 0.4.0 && < 0.5

executable decryption-local
    import:           shared
    main-is:          Local.hs
    hs-source-dirs:   project/decryption-app
    default-language: Haskell2010
    build-depends: lemvi-positions-recording

executable deribit-app
    import:           shared
    main-is:          Main.hs
    hs-source-dirs:   project/deribit-app
    default-language: Haskell2010
    build-depends: lemvi-positions-recording
        , wai-handler-hal >= 0.4.0 && < 0.5

executable deribit-local
    import:           shared
    main-is:          Local.hs
    hs-source-dirs:   project/deribit-app
    default-language: Haskell2010
    build-depends: lemvi-positions-recording

test-suite lemvi-positions-recording-test
    import:           shared
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   project/test
    main-is:          Spec.hs
    other-modules:
        PostSQS
        Helper
        IBrokersReports
        IBrokersMoveFTP
        AWSEvent
        HelperSpec
        AWSEventDecoderSpec
    hs-source-dirs:
        project/test
        project/src
    build-depends: hspec
